--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,11 @@ colorama==0.4.3
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==2.2.6
+django-heroku==0.3.1
 entrypoints==0.3
+gunicorn==20.0.4
 idna==2.9
 importlib-metadata==1.6.0
 ipykernel==5.2.1
@@ -41,6 +44,8 @@ praw==6.5.1
 prawcore==1.3.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
 Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
@@ -66,4 +71,5 @@ urllib3==1.25.9
 wcwidth==0.1.9
 webencodings==0.5.1
 websocket-client==0.57.0
+whitenoise==5.0.1
 zipp==3.1.0
